--- a/DisplayFont/DisplayFont.csproj
+++ b/DisplayFont/DisplayFont.csproj
@@ -129,6 +129,9 @@
       <Version>6.2.8</Version>
     </PackageReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="doc\UWP Horloge - Version 100.xlsx" />
+  </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
