V100 : Initialisation du projet

--- a/Horloge/Horloge.csproj
+++ b/Horloge/Horloge.csproj
@@ -161,6 +161,12 @@
       <Name>Windows IoT Extensions for the UWP</Name>
     </SDKReference>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DisplayFont\DisplayFont.csproj">
+      <Project>{CD0E206E-3300-43D3-838E-1FDCA9D0E687}</Project>
+      <Name>DisplayFont</Name>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
