--- a/Monorail/Monorail.csproj
+++ b/Monorail/Monorail.csproj
@@ -130,6 +130,9 @@
     <Compile Include="BLEAdvertisementWatcherPage.xaml.cs">
       <DependentUpon>BLEAdvertisementWatcherPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="BLEPairedDevicePage.xaml.cs">
+      <DependentUpon>BLEPairedDevicePage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="MicrobitPage.xaml.cs">
       <DependentUpon>MicrobitPage.xaml</DependentUpon>
     </Compile>
@@ -204,6 +207,10 @@
     <Page Include="BLEAdvertisementWatcherPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="BLEPairedDevicePage.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </Page>
     <Page Include="MicrobitPage.xaml">
       <Generator>MSBuild:Compile</Generator>
