--- a/Microbit/Microbit.csproj
+++ b/Microbit/Microbit.csproj
@@ -135,6 +135,9 @@
     <Compile Include="Scenario1_Advertisement.xaml.cs">
       <DependentUpon>Scenario1_Advertisement.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Scenario3_Microbit.xaml.cs">
+      <DependentUpon>Scenario3_Microbit.xaml</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
@@ -142,6 +145,7 @@
     </AppxManifest>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Assets\microbit.png" />
     <Content Include="Assets\microsoft-sdk.png" />
     <Content Include="Assets\windows-sdk.png" />
     <Content Include="Properties\Default.rd.xml" />
@@ -169,6 +173,10 @@
     <Page Include="Scenario1_Advertisement.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Scenario3_Microbit.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Styles\Styles.xaml">
       <Generator>MSBuild:Compile</Generator>
