--- a/Monorail/Monorail.csproj
+++ b/Monorail/Monorail.csproj
@@ -150,6 +150,7 @@
       <SubType>Designer</SubType>
     </AppxManifest>
     <None Include="microbit\microbit-Monorail.hex" />
+    <None Include="microbit\microbit-UART.hex" />
     <None Include="microbit\monorail.py" />
   </ItemGroup>
   <ItemGroup>
