--- a/Monorail/Monorail.csproj
+++ b/Monorail/Monorail.csproj
@@ -127,22 +127,12 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
-    <Compile Include="BLEAdvertisementWatcherPage.xaml.cs">
-      <DependentUpon>BLEAdvertisementWatcherPage.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="BLEPairedDevicePage.xaml.cs">
-      <DependentUpon>BLEPairedDevicePage.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="DisplayHelpers.cs" />
-    <Compile Include="MicrobitPage.xaml.cs">
-      <DependentUpon>MicrobitPage.xaml</DependentUpon>
-    </Compile>
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TextToSpeechPage.xaml.cs">
-      <DependentUpon>TextToSpeechPage.xaml</DependentUpon>
+    <Compile Include="Scenario1_PairingDevice.xaml.cs">
+      <DependentUpon>Scenario1_PairingDevice.xaml</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
@@ -209,29 +199,17 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Page Include="BLEAdvertisementWatcherPage.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="BLEPairedDevicePage.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="MicrobitPage.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
     <Page Include="MainPage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
+    <Page Include="Scenario1_PairingDevice.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Styles\Styles.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
-    </Page>
-    <Page Include="TextToSpeechPage.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
   <ItemGroup>
