--- a/Monorail/Monorail.csproj
+++ b/Monorail/Monorail.csproj
@@ -157,6 +157,7 @@
     <Content Include="Assets\microbit_jaune.png" />
     <Content Include="Assets\microbit_rouge.png" />
     <Content Include="Assets\microbit_vert.png" />
+    <Content Include="Assets\microsoft-sdk.png" />
     <Content Include="Assets\monorail_400x400.png" />
     <Content Include="Assets\SmallTile.scale-100.png" />
     <Content Include="Assets\SmallTile.scale-125.png" />
@@ -193,6 +194,7 @@
     <Content Include="Assets\Wide310x150Logo.scale-125.png" />
     <Content Include="Assets\Wide310x150Logo.scale-150.png" />
     <Content Include="Assets\Wide310x150Logo.scale-400.png" />
+    <Content Include="Assets\windows-sdk.png" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-200.png" />
     <Content Include="Assets\SplashScreen.scale-200.png" />
