--- a/Monorail/Monorail.csproj
+++ b/Monorail/Monorail.csproj
@@ -145,6 +145,8 @@
     <AppxManifest Include="Package.appxmanifest">
       <SubType>Designer</SubType>
     </AppxManifest>
+    <None Include="microbit\0249_microbit_firmware.hex" />
+    <None Include="microbit\microbit-BLEBT.hex" />
     <None Include="microbit\microbit-Monorail.hex" />
     <None Include="microbit\microbit-UART.hex" />
     <None Include="microbit\monorail.py" />
