V100 : Initialisation du projet

--- a/Monorail/Monorail.csproj
+++ b/Monorail/Monorail.csproj
@@ -140,6 +140,9 @@
     <Compile Include="Scenario3_ManagingMicrobit.xaml.cs">
       <DependentUpon>Scenario3_ManagingMicrobit.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Scenario4_ManagingMicrobit.xaml.cs">
+      <DependentUpon>Scenario4_ManagingMicrobit.xaml</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
@@ -226,6 +229,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Scenario3_ManagingMicrobit.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Scenario4_ManagingMicrobit.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
