--- a/Monorail/Monorail.csproj
+++ b/Monorail/Monorail.csproj
@@ -150,6 +150,7 @@
     </AppxManifest>
     <None Include="microbit\0249_microbit_firmware.hex" />
     <None Include="microbit\microbit-BLEBT.hex" />
+    <None Include="microbit\microbit-LED.hex" />
     <None Include="microbit\microbit-Monorail.hex" />
     <None Include="microbit\microbit-UART.hex" />
     <None Include="microbit\monorail.py" />
