--- a/Monorail/Monorail.csproj
+++ b/Monorail/Monorail.csproj
@@ -150,8 +150,10 @@
     </AppxManifest>
     <None Include="microbit\0249_microbit_firmware.hex" />
     <None Include="microbit\microbit-BLE.hex" />
+    <None Include="microbit\microbit-BT.hex" />
     <None Include="microbit\microbit-Monorail.hex" />
     <None Include="microbit\microbit-UART.hex" />
+    <None Include="microbit\microbit-UART.pdf" />
     <None Include="microbit\monorail.py" />
   </ItemGroup>
   <ItemGroup>
