--- a/Monorail/Monorail.csproj
+++ b/Monorail/Monorail.csproj
@@ -153,6 +153,7 @@
     </AppxManifest>
     <None Include="microbit\0249_microbit_firmware.hex" />
     <None Include="microbit\microbit-BT.hex" />
+    <None Include="microbit\microbit-BTBLE.hex" />
     <None Include="microbit\microbit-LED.hex" />
     <None Include="microbit\microbit-Monorail.hex" />
     <None Include="microbit\microbit-UART.hex" />
