--- a/Manege/Manege.csproj
+++ b/Manege/Manege.csproj
@@ -134,6 +134,7 @@
     </AppxManifest>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Assets\advitam.png" />
     <Content Include="Assets\LargeTile.scale-100.png" />
     <Content Include="Assets\manege.png" />
     <Content Include="Assets\microbit.png" />
