--- a/Bluetooth/Bluetooth.csproj
+++ b/Bluetooth/Bluetooth.csproj
@@ -122,7 +122,23 @@
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="MainPageConfiguration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Scenario1_PairingDevice.xaml.cs">
+      <DependentUpon>Scenario1_PairingDevice.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Scenario2_ManagingMicrobit.xaml.cs">
+      <DependentUpon>Scenario2_ManagingMicrobit.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Scenario3_ManagingMicrobit.xaml.cs">
+      <DependentUpon>Scenario3_ManagingMicrobit.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Scenario4_ManagingMicrobit.xaml.cs">
+      <DependentUpon>Scenario4_ManagingMicrobit.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Scenario5_ManagingMicrobit.xaml.cs">
+      <DependentUpon>Scenario5_ManagingMicrobit.xaml</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
@@ -145,6 +161,30 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Page Include="MainPage.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Scenario1_PairingDevice.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Scenario2_ManagingMicrobit.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Scenario3_ManagingMicrobit.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Scenario4_ManagingMicrobit.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Scenario5_ManagingMicrobit.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Styles\Styles.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
