--- a/Monorail/Monorail.csproj
+++ b/Monorail/Monorail.csproj
@@ -151,13 +151,10 @@
     <AppxManifest Include="Package.appxmanifest">
       <SubType>Designer</SubType>
     </AppxManifest>
-    <None Include="microbit\0249_microbit_firmware.hex" />
-    <None Include="microbit\microbit-BT.hex" />
-    <None Include="microbit\microbit-LED.hex" />
-    <None Include="microbit\microbit-Monorail.hex" />
-    <None Include="microbit\microbit-UART.hex" />
-    <None Include="microbit\microbit-UART.pdf" />
-    <None Include="microbit\monorail.py" />
+    <None Include="Microbit\0249_microbit_firmware.hex" />
+    <None Include="Microbit\microbit-BT.hex" />
+    <None Include="Microbit\microbit-Monorail.hex" />
+    <None Include="Microbit\monorail.py" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Assets\LargeTile.scale-100.png" />
