V100 : Initialisation du projet

--- a/Monorail/Monorail.csproj
+++ b/Monorail/Monorail.csproj
@@ -132,6 +132,12 @@
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Scenario1_PairingDevice.xaml.cs">
+      <DependentUpon>Scenario1_PairingDevice.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Scenario2_ManagingMicrobit.xaml.cs">
+      <DependentUpon>Scenario2_ManagingMicrobit.xaml</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
@@ -139,7 +145,6 @@
     </AppxManifest>
     <None Include="Microbit\0249_microbit_firmware.hex" />
     <None Include="Microbit\microbit-BT.hex" />
-    <None Include="Microbit\microbit-Monorail.hex" />
     <None Include="Microbit\monorail.py" />
   </ItemGroup>
   <ItemGroup>
@@ -205,6 +210,14 @@
     <Page Include="MainPage.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Scenario1_PairingDevice.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Scenario2_ManagingMicrobit.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Styles\Styles.xaml">
       <Generator>MSBuild:Compile</Generator>
