--- a/Gigabyte/Gigabyte.csproj
+++ b/Gigabyte/Gigabyte.csproj
@@ -174,6 +174,10 @@
       <Version>6.2.8</Version>
     </PackageReference>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Arduino\2022-06-02_-_Arduino_GIGABYTE\.theia\launch.json" />
+    <None Include="Arduino\2022-06-02_-_Arduino_GIGABYTE\2022-06-02_-_Arduino_GIGABYTE.ino" />
+  </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
