--- a/Horloge/Horloge.csproj
+++ b/Horloge/Horloge.csproj
@@ -17,9 +17,14 @@
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{A5A43C5B-DE2A-4C0C-9213-0A381AF9435A};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WindowsXamlEnableOverview>true</WindowsXamlEnableOverview>
-    <PackageCertificateKeyFile>
-    </PackageCertificateKeyFile>
-    <PackageCertificateThumbprint>5424D3F17F6F16DA16FA77D79462AC61D237252C</PackageCertificateThumbprint>
+    <PackageCertificateKeyFile>Horloge_TemporaryKey.pfx</PackageCertificateKeyFile>
+    <PackageCertificateThumbprint>3300AE0EFC7FE72C5B418A666636CB169EEBC643</PackageCertificateThumbprint>
+    <GenerateAppInstallerFile>False</GenerateAppInstallerFile>
+    <AppxAutoIncrementPackageRevision>False</AppxAutoIncrementPackageRevision>
+    <AppxBundle>Always</AppxBundle>
+    <AppxBundlePlatforms>arm</AppxBundlePlatforms>
+    <AppInstallerUpdateFrequency>1</AppInstallerUpdateFrequency>
+    <AppInstallerCheckForUpdateFrequency>OnApplicationRun</AppInstallerCheckForUpdateFrequency>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
     <DebugSymbols>true</DebugSymbols>
@@ -134,8 +139,12 @@
     </AppxManifest>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Pictures\admin.png" />
+    <Content Include="Pictures\black.png" />
     <Content Include="Pictures\chat01.png" />
-    <Content Include="Pictures\fo.png" />
+    <Content Include="Pictures\csa.png" />
+    <Content Include="Pictures\gamer.png" />
+    <Content Include="Pictures\win10iot.png" />
     <Content Include="Properties\Default.rd.xml" />
     <Content Include="Assets\LockScreenLogo.scale-200.png" />
     <Content Include="Assets\SplashScreen.scale-200.png" />
@@ -170,6 +179,9 @@
       <Project>{CD0E206E-3300-43D3-838E-1FDCA9D0E687}</Project>
       <Name>DisplayFont</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Horloge_TemporaryKey.pfx" />
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
